--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "require": {
-        "clancats/hydrahon": "^1.1"
+        "clancats/hydrahon": "^1.1",
+        "phpmailer/phpmailer": "^6.9"
+        
     },
     "autoload": {
         "psr-4": {
